@@ -64,7 +64,12 @@ processResources {
 // this fixes some edge cases with special characters not displaying correctly
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--add-modules", "jdk.incubator.vector"]
     options.encoding = "UTF-8"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += ["--add-modules", "jdk.incubator.vector"]
 }
 
 java {
